--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/DemirAmetov96/YelpCamp#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
@@ -27,6 +28,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
