--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Yelp clone for camping. This is an app that is a clone of the popular service YELP except this will be focused on only camping areas. It will essentially allow users to leave reviews of places they camped for other users to see along with all of the other features that YELP has. This means the app will have:",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
